// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`searchPatternFlyDocsTool should have a consistent return structure: structure 1`] = `
{
  "callback": [Function],
  "name": "searchPatternFlyDocs",
  "schema": true,
}
`;

exports[`searchPatternFlyDocsTool, callback should parse parameters, default 1`] = `
{
  "content": [
    {
      "text": "# Search results for "Button"
## Button
**Match Type**: exact
### "usePatternFlyDocs" tool documentation URLs
  1. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/design-guidelines/components/button/button.md
  2. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/accessibility/button/button.md
  3. https://raw.githubusercontent.com/patternfly/patternfly-react/refs/tags/v6.4.0/packages/react-core/src/components/Button/examples/Button.md
### Resources
  - patternfly://docs/Button
  - patternfly://schemas/Button

---

**Important**:
  - Use the "usePatternFlyDocs" tool with the above URLs to fetch documentation content.
  - To browse all available documentation, read the "patternfly://docs/index" URI resource.
  - To browse all available components, read the "patternfly://schemas/index" URI resource.",
      "type": "text",
    },
  ],
}
`;

exports[`searchPatternFlyDocsTool, callback should parse parameters, with lower case componentName 1`] = `
{
  "content": [
    {
      "text": "# Search results for "button"
## Button
**Match Type**: exact
### "usePatternFlyDocs" tool documentation URLs
  1. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/design-guidelines/components/button/button.md
  2. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/accessibility/button/button.md
  3. https://raw.githubusercontent.com/patternfly/patternfly-react/refs/tags/v6.4.0/packages/react-core/src/components/Button/examples/Button.md
### Resources
  - patternfly://docs/Button
  - patternfly://schemas/Button

---

**Important**:
  - Use the "usePatternFlyDocs" tool with the above URLs to fetch documentation content.
  - To browse all available documentation, read the "patternfly://docs/index" URI resource.
  - To browse all available components, read the "patternfly://schemas/index" URI resource.",
      "type": "text",
    },
  ],
}
`;

exports[`searchPatternFlyDocsTool, callback should parse parameters, with made up componentName 1`] = `
{
  "content": [
    {
      "text": "No PatternFly documentation found matching "lorem ipsum dolor sit amet"

---

**Important**:
  - To browse all available documentation, read the "patternfly://docs/index" URI resource.
  - To browse all available components, read the "patternfly://schemas/index" URI resource.",
      "type": "text",
    },
  ],
}
`;

exports[`searchPatternFlyDocsTool, callback should parse parameters, with multiple words 1`] = `
{
  "content": [
    {
      "text": "No PatternFly documentation found matching "Button Card Table"

---

**Important**:
  - To browse all available documentation, read the "patternfly://docs/index" URI resource.
  - To browse all available components, read the "patternfly://schemas/index" URI resource.",
      "type": "text",
    },
  ],
}
`;

exports[`searchPatternFlyDocsTool, callback should parse parameters, with partial componentName 1`] = `
{
  "content": [
    {
      "text": "# Search results for "ton"
## Button
**Match Type**: suffix
### "usePatternFlyDocs" tool documentation URLs
  1. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/design-guidelines/components/button/button.md
  2. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/accessibility/button/button.md
  3. https://raw.githubusercontent.com/patternfly/patternfly-react/refs/tags/v6.4.0/packages/react-core/src/components/Button/examples/Button.md
### Resources
  - patternfly://docs/Button
  - patternfly://schemas/Button
## Text
**Match Type**: fuzzy
### "usePatternFlyDocs" tool documentation URLs
  - No URLs found
### Resources
  - patternfly://docs/Text
  - patternfly://schemas/Text

---

**Important**:
  - Use the "usePatternFlyDocs" tool with the above URLs to fetch documentation content.
  - To browse all available documentation, read the "patternfly://docs/index" URI resource.
  - To browse all available components, read the "patternfly://schemas/index" URI resource.",
      "type": "text",
    },
  ],
}
`;

exports[`searchPatternFlyDocsTool, callback should parse parameters, with trimmed componentName 1`] = `
{
  "content": [
    {
      "text": "# Search results for " Button  "
## Button
**Match Type**: exact
### "usePatternFlyDocs" tool documentation URLs
  1. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/design-guidelines/components/button/button.md
  2. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/accessibility/button/button.md
  3. https://raw.githubusercontent.com/patternfly/patternfly-react/refs/tags/v6.4.0/packages/react-core/src/components/Button/examples/Button.md
### Resources
  - patternfly://docs/Button
  - patternfly://schemas/Button

---

**Important**:
  - Use the "usePatternFlyDocs" tool with the above URLs to fetch documentation content.
  - To browse all available documentation, read the "patternfly://docs/index" URI resource.
  - To browse all available components, read the "patternfly://schemas/index" URI resource.",
      "type": "text",
    },
  ],
}
`;

exports[`searchPatternFlyDocsTool, callback should parse parameters, with upper case componentName 1`] = `
{
  "content": [
    {
      "text": "# Search results for "BUTTON"
## Button
**Match Type**: exact
### "usePatternFlyDocs" tool documentation URLs
  1. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/design-guidelines/components/button/button.md
  2. https://raw.githubusercontent.com/patternfly/patternfly-org/fb05713aba75998b5ecf5299ee3c1a259119bd74/packages/documentation-site/patternfly-docs/content/accessibility/button/button.md
  3. https://raw.githubusercontent.com/patternfly/patternfly-react/refs/tags/v6.4.0/packages/react-core/src/components/Button/examples/Button.md
### Resources
  - patternfly://docs/Button
  - patternfly://schemas/Button

---

**Important**:
  - Use the "usePatternFlyDocs" tool with the above URLs to fetch documentation content.
  - To browse all available documentation, read the "patternfly://docs/index" URI resource.
  - To browse all available components, read the "patternfly://schemas/index" URI resource.",
      "type": "text",
    },
  ],
}
`;
